fixed dark mode bug

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,17 +36,27 @@ main {
 }
 
 .divider__start {
+  background: $color-secondary;
+  background: linear-gradient(93deg, $color-background 0%, $color-background 50%, $color-background 51%, $color-secondary 51%, $color-secondary 100%);
   height: 100%;
   width: 100%;
-  background: #357675; /* Old browsers */
-  background: linear-gradient(93deg, #357675 0%,#357675 50%,#ffeadb 51%,#ffeadb 51%,#ffeadb 100%);
+  
+  @media (prefers-color-scheme: dark) {
+    background: $color-secondary;
+    background: linear-gradient(93deg, $color-secondary 0%, $color-secondary 50%, $color-background 51%, $color-background 51%, $color-background 100%);
+  }
 }
 
 .divider__end {
+  background: $color-background;
+  background: linear-gradient(93deg, $color-secondary 0%, $color-secondary 50%, $color-secondary 51%, $color-background 51%, $color-background 100%);
   height: 100%;
   width: 100%;
-  background: #357675; /* Old browsers */
-  background: linear-gradient(93deg, #ffeadb 0%,#ffeadb 50%,#ffeadb 51%,#357675 51%,#357675 100%);
+
+  @media (prefers-color-scheme: dark) {
+    background: $color-secondary;
+    background: linear-gradient(93deg, $color-background 0%, $color-background 50%, $color-background 51%, $color-secondary 51%, $color-secondary 100%);
+  }
 }
 
 a:-webkit-any-link {
